# utf8-counter

./: .editorconfig  BENCHMARK.md  Cargo.toml  README.md  criterion.toml  rustfmt.toml
.github/: dependabot.yml
benches/: counter.rs
src/: counter.rs  lib.rs  main.rs  sequence.rs
