[package]
name = "prob8"
version = "0.1.0"
edition = "2024"
description = "Calculate how many possible UTF8 strings there are"
readme = "README.md"
publish = false

[dependencies]
clap = { version = "^4.5.26", features = ["derive"] }
num-bigint = "^0.4.6"
num-format = { version = "^0.4.4", features = ["with-num-bigint"] }
static_assertions = "^1.1.0"

[dev-dependencies]
pretty_assertions = { version = "^1.4.1", features = ["unstable"] }
proptest = "^1.6.0"
rayon = "^1.10.0"
