[package]
name = "prob8"
version = "0.1.0"
edition = "2024"
description = "Calculate how many possible UTF8 strings there are"
readme = "README.md"
publish = false

[dependencies]
clap = { version = "^4.5.26", features = ["derive"] }
num-bigint = "^0.4.6"
num-format = { version = "^0.4.4", features = ["with-num-bigint"] }
static_assertions = "^1.1.0"

[dev-dependencies]
pretty_assertions = { version = "^1.4.1", features = ["unstable"] }
proptest = "^1.6.0"
rayon = "^1.10.0"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
# Lint groups
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Lints allowed even in all
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
lossy_float_literal = "warn"
alloc_instead_of_core = "warn"
as_underscore = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
empty_drop = "warn"
exhaustive_enums = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
integer_division_remainder_used = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic_in_result_fn = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"
unnecessary_self_imports = "warn"
